katalog/opa-gatekeeper/constraints/requiredLimits.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLimits
metadata:
  name: deployments-must-have-limits
spec:
  match:
    kinds:
      - apiGroups: ["apps", "extensions"]
        kinds: ["Deployment"]
